--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="digit"
+            android:onClick="operator"
             android:text="/"
             />
 
@@ -98,7 +98,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="digit"
+            android:onClick="operator"
             android:text="*"
             />
 
@@ -141,7 +141,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="digit"
+            android:onClick="operator"
             android:text="-"
             />
 
@@ -187,7 +187,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="digit"
+            android:onClick="operator"
             android:text="+"
             />
 
@@ -203,7 +203,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="digit"
+            android:onClick="operator"
             android:text="="
             />
 
